<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateToDoItem">
    <TextView
            android:text="@string/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/black"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:autofillHints="@string/item_title"
            android:hint="@string/item_title"
            android:ems="10"
            android:id="@+id/editTitle"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/item_importance"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editImportant"
            android:entries="@array/importances"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
    />
    <TextView
            android:text="@string/item_description"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editImportant" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:autofillHints="@string/item_description"
            android:hint="@string/item_description"
            android:ems="10"
            android:id="@+id/editDescription"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/item_date"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <!--editDate-->
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateView" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editDescription"/>
    <Button
            android:text="@string/btn_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editDate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateToDo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>