<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="Custom" type="com.example.todolist.ToDoListActivity"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ToDoListActivity">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@drawable/add_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/add_to_do" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/btn_show_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowAll" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
        <Button
                android:text="@string/btn_show_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowActive" app:layout_constraintStart_toEndOf="@+id/btnShowAll"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <Button
                android:text="@string/btn_show_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowCompleted" app:layout_constraintStart_toEndOf="@+id/btnShowActive"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <include layout="@layout/content_list"
                 tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/btnShowAll"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>